# SimCraft

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  README.md  README.txt  pyproject.toml  vcpkg.json
Apps/: CMakeLists.txt
Apps/cube-drop/: main.cc
Apps/ipc-fem/: main.cc
Apps/multi-body/: main.cc
Apps/prescribed-motion/: main.cc
Apps/vk-triangle/: main.cc
Collision/: CMakeLists.txt
Collision/apps/: vis-2d.cc
Collision/include/collision/: collision-detect.h  lbvh.h  lbvh.inl
Core/: CMakeLists.txt
Core/include/Core/: aabb.h  animation.h  arc.h  core.h  cuda-utils.h  debug.h  deserializer.h  dynamic-reflection.h  json.h  log.h  mesh.h  obj-loader.h  profiler.h  properties.h  rand-gen.h  range-for.h  reflection.h  static-reflection.h  surface.h  tensor.h  timer.h  transfer-stencil.h  type-utils.h  utils.h  zip.h
Core/shaders/: default.fs  default.vs  point2d.fs  point2d.vs
Core/src/: json.cc  obj-io.cc  obj-loader.cc  rand-gen.cc  surface.cc  utils.cc
Core/tests/: basic-deserializer-test.cc  json-test.cc  reflect-test.cc  test-cubic-solver.cc  zip-test.cc
Deform/: CMakeLists.txt
Deform/apps/: deform-explore.cc  deform.cc
Deform/include/Deform/: deformation-gradient.h  invariants.h  polar-decomp.h  strain-energy-density-factory.h  strain-energy-density.h  types.h
Deform/src/: strain-energy-density-factory.cc  strain-energy-density.cc
Deform/tests/: deform-gradient-test.cc
FEM/: CMakeLists.txt  README.md
FEM/apps/: fem.cc  ipc-fem.cc  toy-ipc.cc
FEM/assets/tets/: bunny.tobj  cube10x10.tobj  cube1x1.tobj  cube2x2.tobj  mat100x100.tobj  mat1x1.tobj  mat2x1.tobj  mat2x2.tobj
FEM/benchmarks/: bench-newton-step.cc
FEM/include/fem/: boundary-conditions.h  colliders.h  collision-resolver.h  constraints.h  dbc.h  derivatives.h  external-force.h  fem-simulation.h  geometry-manager.h  integrator-factory.h  integrator.h  kinematic-body.h  primitive.h  scene.h  simplex.h  system.h  tet-mesh.h  trajectories.h  types.h  visualizer.h
FEM/python/: generate_cube.py  generate_mat.py
FEM/src/: collision-resolver.cc  constraints.cc  geometry-manager.cc  integrator-factory.cc  integrator.cc  system.cc  tet-mesh.cc
FEM/src/ipc/: collision-detector.cc  collision-pair.cc  constraint.cc  distances.cc  implicit-euler.cc  integrator.cc
FEM/src/primitives/: elastic-tet-mesh.cc  tet-mesh.cc
FEM/tests/: GIPC-BARRIER-TEST-PLAN.md  IPC-CONSTRAINT-REFACTOR-PHASE3-PLAN.md  IPC-CONSTRAINT-REFACTOR-PLAN.md  PHASE2-3-DELIVERABLES.md  PHASE2-3-PROGRESS-SUMMARY.md  ccd-test.cc  constant-velocity-test.cc  coplanar-solver-test.cc  deserializer-test.cc  distance-gradient-test.cc  distance-test.cc  ee-ccd-test.cc  gradient-test.cc  sim-build-test.cc  test-constraints.cc  test-gipc-barrier.cc  test-kinematic.cc  test-phase2-activation.cc  test-phase3-unified-barrier.cc  test-prescribed.cc  vt-ccd-test.cc
FEM/tests/test-scenarios/: basic-arap.json  complex-with-preconditioner.json  multi-primitive.json  stable-neohookean-cg.json
FluidSim/: CMakeLists.txt  README.md
FluidSim/apps/: bug.cc  fluid-example.cc  fluid-sim.cc  gpu-free-surface.cu  gpu-smoke.cc  gpu-smoke.cu
FluidSim/include/FluidSim/: fluid-sim.h  fluid-simulator.h  gpu-arrays.h
FluidSim/shaders/: collider.fs  default.vs  normal.fs  perspective-mesh.vs  perspective-sdf.vs  perspective.vs  point.fs  sdf.fs  smoke.fs
FluidSim/src/: advect-solver.cc  app-cpu-gl.cc  fluid-example.cc  fluid-simulator-2d.cc  fluid-simulator-3d.cc  fluid-simulator.cc  project-solver.cc  sp-grid.cc  util.cc
FluidSim/src/cpu/: advect-solver.cc  fluid-simulator-3d.cc  fluid-simulator.cc  project-solver.cc  rebuild-surface.cc  util.cc
FluidSim/src/cuda/: advect-solver.cu  fluid-simulator.cu  kernels.cu  mgpcg.cu  particle-reconstructor.cu  project-solver.cu  rebuild-surface.cu  utils.cu
FluidSim/src/gpu/: kernels.cu
FluidSim/tests/: test-fluid-utils.cu
HairSim/: CMakeLists.txt
HairSim/apps/: app.cc  hair-sim-app.cc
HairSim/include/HairSim/: band-matrix.h  constraints.h  forces.h  grads.h  hair-dof.h  hair-sim.h  hair-system.h  hair.h  system.h  time-steppers.h  utils.h
HairSim/src/: forces.cc  hair.cc
HairSim/tests/: test-band-matrix.cc
MPM/: CMakeLists.txt
MPM/include/MPM/: constitutive-model.h  mpm-cpu.h  mpm.h  transfer-stencil.h
MPM/src/: app-gl.cc
Maths/: CMakeLists.txt
Maths/benchmarks/: bench-maths.cc
Maths/include/Maths/: amg-preconder.h  block-linear-solver.h  block-sparse-matrix.h  block-types.h  block-vector.h  svd.h  (+10 more)
Maths/src/: amg.cc  equations.cc  linear-solver-factory.cc  linear-solver.cc
Maths/tests/: test-block-pcg.cc  test-block-types.cc  test-cubic-solver.cc  test-equations.cc  test-sparse-builder.cc  test-symmetric-mode.cc  test-tensor.cc  test.cc
OglRender/: CMakeLists.txt  README.md
OglRender/apps/: demo.cc  mesh-view.cc  perf-lab.cc
OglRender/ext/: imgui-wrapper.cc
OglRender/shaders/: 2D-default.frag  2D-default.vert  2d-default.fs  2d-default.vs  blinn-phong.frag  perspective.vert  phong.frag
OglRender/src/: camera-controller.cc  camera.cc  ogl-ctx.cc  shader-prog.cc
PoissonSolver/: CMakeLists.txt  README.md
PoissonSolver/src/: cg-solver.cc  multigrid.cc  util.cc
PoissonSolver/test/: poisson-test.cc
RHI/: CMakeLists.txt
RHI/tests/: test-buffer.cc  test-compute-trivial.cc  test-device.cc  test-draw-triangle.cc  test-fence.cc  test-image.cc  test-rc-ptr.cc  test-shader-compiler.cc  test-shader-params.cc  test-shader-reflect.cc
Renderer/: CMakeLists.txt
Renderer/src/: gl-renderer.cc  gl-renderer.h
Spatify/: CMakeLists.txt  README.md
Spatify/tests/: spatial-hash.cc  test-morton-encode-decode.cc
python/: CMakeLists.txt  README.md
python/examples/: bunny_bounce.py  cantilever_beam.py  cube_drop.py  multi_body.py  prescribed_motion.py  rotating_obstacle.py  squeeze.py  twist.py
python/scripts/: normalize_mesh.py
python/src/: bind_constraints.cc  bind_integrator.cc  bind_kinematic.cc  bind_material.cc  bind_mesh.cc  bind_renderer.cc  bind_simulation.cc  bind_system.cc  bindings.h  module.cc
python/tests/: test_import.py
(+389 files in other folders)
