cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CUDA_ARCHITECTURES 52;70;75;86)
project(SimCraft)

find_package(TBB REQUIRED)
find_package(glfw3 REQUIRED)
set(GLAD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/glad/include)
set(EXTERNAL_PATH ${CMAKE_CURRENT_SOURCE_DIR}/external)
set(ASSETS_PATH ${CMAKE_CURRENT_SOURCE_DIR}/assets)
find_package(Eigen3 REQUIRED)
add_subdirectory(external/glad)
add_subdirectory(external/imgui)
add_subdirectory(Core)
add_subdirectory(Maths)
add_subdirectory(OglRender)
add_subdirectory(Spatify)
#add_subdirectory(PoissonSolver)
add_subdirectory(FluidSim)
add_subdirectory(Deform)
add_subdirectory(FEM)
add_subdirectory(MPM)
#add_subdirectory(HairSim)
