project(FEM LANGUAGES CXX)

option(FEM_BUILD_GUI "Build the GUI" ON)

file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cc src/*.cpp include/*.h)
add_library(FEM STATIC ${srcs})
target_link_libraries(FEM PUBLIC Maths Core Spatify Deform)
if(FEM_BUILD_GUI)
    target_link_libraries(FEM PUBLIC ogl-render)
endif ()
target_include_directories(FEM PUBLIC include)

set(FEM_ASSETS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/assets)
set(FEM_TETS_DIR ${FEM_ASSETS_DIR}/tets)
add_definitions(-DFEM_ASSETS_DIR="${FEM_ASSETS_DIR}")
add_definitions(-DFEM_TETS_DIR="${FEM_TETS_DIR}")

file(GLOB APPLICATIONS apps/*.cc)
foreach (app ${APPLICATIONS})
    get_filename_component(app_name ${app} NAME_WE)
    add_executable(${app_name} ${app})
    target_link_libraries(${app_name} PUBLIC FEM ogl-render cxxopts)
endforeach ()

file(GLOB TESTS tests/*.cc)
foreach (test ${TESTS})
    get_filename_component(test_name ${test} NAME_WE)
    add_executable(${test_name} ${test})
    target_link_libraries(${test_name} PUBLIC FEM gtest gtest_main)
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach ()