file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cc src/*.cpp include/*.h)
add_library(MPM STATIC ${srcs})
target_include_directories(MPM PUBLIC include)
target_include_directories(MPM PUBLIC "${EXTERNAL_PATH}/imgui")
target_link_libraries(MPM PUBLIC Core Maths Deform Spatify)
add_executable(mpm-app-gl src/app-gl.cc)
target_link_libraries(mpm-app-gl PUBLIC imgui)
target_link_libraries(mpm-app-gl PUBLIC imgui_impl_glfw)
target_link_libraries(mpm-app-gl PUBLIC imgui_impl_opengl3)
target_link_libraries(mpm-app-gl PUBLIC MPM)
target_link_libraries(mpm-app-gl PUBLIC glfw3)