project(Maths LANGUAGES CXX)
file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cc src/*.cpp include/*.h)
add_library(Maths STATIC ${srcs})
target_include_directories(Maths PUBLIC include ${EIGEN3_INCLUDE_DIR})
target_link_libraries(Maths PUBLIC Eigen3::Eigen Core TBB::tbb)

file(GLOB_RECURSE test_srcs CONFIGURE_DEPENDS tests/*.cc)

foreach(test_src ${test_srcs})
    get_filename_component(test_name ${test_src} NAME_WE)
    add_executable(${test_name} ${test_src})
    target_link_libraries(${test_name} PUBLIC Maths GTest::gtest GTest::gtest_main)
    add_test(NAME ${test_name} CONFIGURATIONS Release COMMAND ${test_name})
endforeach()

file(GLOB apps CONFIGURE_DEPENDS apps/*.cc)
foreach (app ${apps})
    get_filename_component(app_name ${app} NAME_WE)
    add_executable(${app_name} ${app})
    target_link_libraries(${app_name} PUBLIC Maths)
endforeach()

# Benchmarks
file(GLOB bench_srcs CONFIGURE_DEPENDS benchmarks/*.cc)
foreach(bench_src ${bench_srcs})
    get_filename_component(bench_name ${bench_src} NAME_WE)
    add_executable(${bench_name} ${bench_src})
    target_link_libraries(${bench_name} PUBLIC Maths)
endforeach()